@@ -4,6 +4,7 @@
 
 -textarea を 'display: block' に変更しました。
 -Twitterへの通知送信を更新通知Pingの設定と連動するようにしました。
+-{[asin:XXXX:image]}記法使用時、スライドショー（Lightbox2）の対象にならないようにしました。
 -付加情報リビルド時にタグ情報テーブルも再生成するようにしました。
 -ツリー編集画面で項目編集中にツリー内の別の場所をクリックしたら編集を終了するようにしました。
 -記事一覧を nofollow から外しロボットに検索させるようにしました。((検索エンジンにサイト内のすべての記事を見つけてもらいやすくするための措置です。サイトマップの代わり。))
